; ModuleID = '/home/carl/AnghaBench/twemproxy/src/proto/extr_nc_memcache.c_memcache_fragment.c'
source_filename = "/home/carl/AnghaBench/twemproxy/src/proto/extr_nc_memcache.c_memcache_fragment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msg = type { i32 }
%struct.msg_tqh = type { i32 }

@NC_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @memcache_fragment(%struct.msg* %0, i32 %1, %struct.msg_tqh* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.msg*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.msg_tqh*, align 8
  store %struct.msg* %0, %struct.msg** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.msg_tqh* %2, %struct.msg_tqh** %7, align 8
  %8 = load %struct.msg*, %struct.msg** %5, align 8
  %9 = call i64 @memcache_retrieval(%struct.msg* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %3
  %12 = load %struct.msg*, %struct.msg** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = load %struct.msg_tqh*, %struct.msg_tqh** %7, align 8
  %15 = call i32 @memcache_fragment_retrieval(%struct.msg* %12, i32 %13, %struct.msg_tqh* %14, i32 1)
  store i32 %15, i32* %4, align 4
  br label %18

16:                                               ; preds = %3
  %17 = load i32, i32* @NC_OK, align 4
  store i32 %17, i32* %4, align 4
  br label %18

18:                                               ; preds = %16, %11
  %19 = load i32, i32* %4, align 4
  ret i32 %19
}

declare dso_local i64 @memcache_retrieval(%struct.msg*) #1

declare dso_local i32 @memcache_fragment_retrieval(%struct.msg*, i32, %struct.msg_tqh*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
